appId: com.loanmortgage.mymortgage
---
- tapOn: "addPrimaryApplicantBtn"
- tapOn: "nationalIdTypeRadioKTP"
- tapOn: "nationalIdNumberText"
- inputText: "3578160910007"
- "hideKeyboard"
- tapOn: "fullNameText"
- inputText: "Akbar Rizqi Luhur Pambudi"
- "hideKeyboard"
- tapOn: "selectDateIcon"
- tapOn:
    id: "android:id/date_picker_header_year"
- scrollUntilVisible:
    element: "1997"
    direction: "UP"
- tapOn: "1997"
- tapOn: "1"
- tapOn: "OK"
- "scroll"
- tapOn: "maritalStatusRadioSingle"
- tapOn: "streetText"
- inputText: "Cendana Parc 15/20"
- "hideKeyboard"
- tapOn: "houseNumberText"
- inputText: "20"
- "hideKeyboard"
- "scroll"
- tapOn: "cityText"
- inputText: "Surabaya"
- "hideKeyboard"
- tapOn: "rtText"
- inputText: 1
- "hideKeyboard"
- tapOn: "rwText"
- inputText: 2
- "hideKeyboard"
- "scroll"
- tapOn: "subDistrictText"
- inputText: "Sawojajar"
- "hideKeyboard"
- tapOn: "districtText"
- inputText: "Bubutan"
- "hideKeyboard"
- tapOn: "provinceText"
- inputText: "Jawa Timur"
- "hideKeyboard"
- "scroll"
- tapOn: "postalCodeText"
- inputText: "30918"
- "hideKeyboard"
- tapOn: "Banking"
- "scroll"
- tapOn: "employerNameText"
- tapOn: "employmentTypeRadioEmployee"
- inputText: "PT. Bentoel 503"
- "hideKeyboard"
- tapOn: "selectDateIcon"
- tapOn: "2023"
- tapOn: "2022"
- tapOn: "8"
- tapOn: "OK"
- "scroll"
- tapOn: "submitBtn"
